--- a/roles/edge-router/templates/edge_router.env.j2
+++ b/roles/edge-router/templates/edge_router.env.j2
@@ -7,6 +7,9 @@ parameters:
   {{env.name|lower}}_hub_prefix: "{{env.hub_prefix}}"
   {{env.name|lower}}_hub_export_rt: "{{env.hub_export_rt}}"
   {{env.name|lower}}_hub_import_rt: "{{env.hub_import_rt}}"
+{% if env['dedicated_edge'] is defined and env['dedicated_edge'] | bool  %}
+  {{env.name|lower}}_edge_count: "{{env.edge_count| default(edge_count)}}"
+{% endif %}
 {% endfor %}
   mgnt_vlan: "{{mgnt_vlan}}"
   mgnt_prefix: "{{mgnt_prefix}}"
@@ -28,4 +31,4 @@ parameters:
   health_check_retries: {{health_check_retries}}
   health_check_timeout: {{health_check_timeout}}
   peer_keepalive: {{peer_keepalive}}
-  peer_holdtime: {{peer_hosdtime}}
+  peer_holdtime: {{peer_holdtime}}
