Change hardcoded ssh key to passed through heat env file

--- a/roles/edge-router/templates/edge_router.env.j2
+++ b/roles/edge-router/templates/edge_router.env.j2
@@ -11,6 +11,7 @@ parameters:
   {{env.name|lower}}_edge_count: "{{env.edge_count| default(edge_count)}}"
 {% endif %}
 {% endfor %}
+  ssh_key: "{{ssh_key}}"
   mgnt_vlan: "{{mgnt_vlan}}"
   mgnt_prefix: "{{mgnt_prefix}}"
   mgnt_alloc_pool: "{{mgnt_alloc_pool}}"
