--- a/roles/deploy_osh/templates/helm_vars_contrail_common.yaml.j2
+++ b/roles/deploy_osh/templates/helm_vars_contrail_common.yaml.j2
@@ -76,6 +76,6 @@ manifests:
   configmap_vrouter_sriov: false
   daemonset_kernel: true
   daemonset_dpdk: false
-  daemonset_vrouter_sriov: true
+  daemonset_vrouter_sriov: false
   secret_vrouter_keystone_admin: true
   job_kubernetes_cni_init: false
